# rpcz

./: .gitignore  .travis.yml  CMakeLists.txt  FindProtobufPlugin.cmake  README.md
cmake_modules/: FindGFlags.cmake  FindProtobufPlugin.cmake  FindZeroMQ.cmake  install_deps.cmake  zrpc_functions.cmake
examples/cpp/: CMakeLists.txt  example_client.cc  example_server.cc
examples/python/: example_client.py  example_server.py  generate_protos.py
include/rpcz/: application.h  application.hpp  callback.h  callback.h.pump  connection_manager.h  event_manager.h  macros.h  macros.hpp  rpc.h  rpc.hpp  rpc_channel.h  rpcz.h  rpcz.pb.h  server.h  server.hpp  service.h  sync_event.h  zmq_utils.h  zmq_utils.hpp
include/zrpc/: application.h  callback.h  callback.h.pump  connection_manager.h  event_manager.h  macros.h  pointer_vector.h  remote_response.h  rpc.h  rpc_channel.h  server.h  service.h  sync_event.h  zmq_utils.h  zrpc.h
python/: .gitignore  compiler.py  pywrapzrpc.pyx  setup.py  zrpc.pyx
python/cython/: python_rpc_service.h  pywraprpcz.cpp  pywraprpcz.pyx  pywrapzrpc.cpp  pywrapzrpc.pyx
python/rpcz/: __init__.py  rpc.py  service_reflection.py
python/tests/: client.py
python/zrpc/: __init__.py  connection.py  rpc.py  service_reflection.py
src/: CMakeLists.txt  server.cc
src/plugin/cpp/: CMakeLists.txt  file_generator.cc  zrpc_cpp_generator.cc  zrpc_cpp_generator.h  zrpc_cpp_main.cc  zrpc_cpp_service.cc  zrpc_cpp_service.h
src/rpcz/: CMakeLists.txt  application.cc  clock.cc  clock.h  connection_manager.cc  event_manager.cc  function_server.h  reactor.cc  reactor.h  remote_response.cc  rpc.cc  rpc_channel_impl.cc  rpc_channel_impl.h  server.cc  sync_event.cc  zmq_utils.cc  zsendrpc.cc
src/rpcz/ext/python/: client.py
src/rpcz/plugin/cpp/: CMakeLists.txt  file_generator.cc  rpcz_cpp_service.cc
src/rpcz/plugin/python/: CMakeLists.txt
src/rpcz/proto/: rpcz.proto
src/zrpc/: CMakeLists.txt  application.cc  client_pool.cc  client_request.h  clock.cc  clock.h  connection_manager.cc  connection_manager_controller.h  event_manager.cc  event_manager.h  event_manager_controller.h  function_server.cc  function_server.h  logging.h  macros.h  pointer_vector.h  reactor.cc  reactor.h  remote_response.cc  rpc.cc  rpc.h  rpc_channel.cc  rpc_channel.h  rpc_channel_impl.cc  rpc_channel_impl.h  server.cc  server.h  service.h  simple_rpc_channel.cc  simple_rpc_channel.h  string_piece.h  sync_event.cc  thread_pool.h  zmq_rpc_channel.cc  zmq_rpc_channel.h  zmq_utils.cc  zmq_utils.h  zsendrpc.cc
src/zrpc/base/: stringprintf.cc  stringprintf.h
src/zrpc/ext/python/: client.py
src/zrpc/plugin/common/: substitute.h
src/zrpc/plugin/cpp/: CMakeLists.txt  file_generator.cc  file_generator.h  zrpc_cpp_generator.cc  zrpc_cpp_generator.h  zrpc_cpp_main.cc  zrpc_cpp_service.cc  zrpc_cpp_service.h
src/zrpc/plugin/python/: CMakeLists.txt  zrpc_python_generator.cc  zrpc_python_generator.h  zrpc_python_main.cc
src/zrpc/proto/: CMakeLists.txt  zrpc.proto
test/: CMakeLists.txt  application_test.cc  callback_test.cc  client_server_test.cc  client_test.cc  connection_manager_test.cc  event_manager_test.cc  function_server_test.cc  search_main.cc  zrpc_gtest_main.cc
test/proto/: CMakeLists.txt  search.proto
